# easyjson

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/easyjson/: easyjson.h  easyjson_one_file.h
include/easyjson/internal/: custom_allocator.h  json_core.h  json_utilities.h  small_object_allocator.h
src/: easyjson.cpp  json_core.cpp
tests/: CMakeLists.txt  big_file_test.cpp  file_test.cpp  simple_json_tests.cpp
tests/data/: json_files.txt  json_files_performace.txt  messages.json  test_data.txt  test_file_1.json  test_file_10.json  test_file_1a.json  test_file_1b.json  test_file_2.json  test_file_4.json  test_file_5.json  test_file_6.json  test_file_6a.json  test_file_6b.json  test_file_6c.json  test_file_6d.json  test_file_6e.json  test_file_9.json
